# srs

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: pr.yaml  release.yaml  rust.yaml
src/: crypto.rs  main.rs  storage.rs
src/auth/: mod.rs
src/auth/macos/: helper.swift  mod.rs
src/keychain/: keychain_helper.swift  mod.rs
src/keychain/macos/: keychain_helper.swift
