[package]
name = "srs"
version = "0.1.1"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
sha2 = "0.10"
rpassword = "7.4.0"
dirs = "6.0.0"
