[package]
name = "srs"
version = "0.1.1"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
sha2 = "0.10"
rpassword = "7.4.0"
dirs = "6.0.0"
keyring-core = "0.7.0"

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v4"] }

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
apple-native-keyring-store = "0.1.0"

[target."cfg(any(target_os = \"windows\"))".dependencies]
windows-native-keyring-store = "0.1.0"

[target."cfg(any(target_os = \"android\"))".dependencies]
android-native-keyring-store = "0.3.0"

[target."cfg(any(target_os = \"linux\"))".dependencies]
dbus-secret-service-keyring-store = { version = "0.2.0", features = ["crypto-rust"], optional = true }
linux-keyutils-keyring-store = { version = "0.1.0", optional = true }

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
