[package]
name = "srs"
version = "0.2.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
sha2 = "0.10"
rpassword = "7.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyutils = "0.4.0"

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
